# ******************************************************************************
#
# django-loader, a configuration and secret loader for Django
#
# Copyright (C) 2021 Jeremy A Gray <gray@flyquackswim.com>.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[flake8]

extend-exclude = manage.py,migrations
max-complexity = 20
max-line-length = 88
extend-ignore = E203, W503
    __init__.py F401

[metadata]

author = Jeremy A Gray
author_email = jeremy.a.gray@gmail.com
description = reusable blog app
license = Proprietary
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = jeremy.a.gray@gmail.com
name = django-blog
url = https://www.flyquackswim.com/
version = 0.0.1

classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]

include-package-data = true
packages = find:

install_requires =
  Django
  Pillow
  django-autoslug
  psycopg2

tests_require =
  Sphinx
  black
  flake8
  flake8-docstrings
  isort
  pccc
  pre-commit
  pytest
  pytest-cov
  pytest-django
