# ******************************************************************************
#
# django-loader, a configuration and secret loader for Django
#
# Copyright 2021-2023 Jeremy A Gray <gray@flyquackswim.com>.
#
# SPDX-License-Identifier: MIT
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = a configuration and secret loader for Django
license = MIT License
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = django-loader
url = https://www.flyquackswim.com/
version = 0.0.11

classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Framework :: Django :: 4.2
  # Framework :: Django :: 5.0
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Internet :: WWW/HTTP :: Site Management

project_urls =
  Issues = https://github.com/jeremyagray/django-loader/issues
  Documentation = https://django-loader.readthedocs.io/
  Repository = https://github.com/jeremyagray/django-loader

[options]

include-package-data = true
packages = find:

install_requires =
  Django
  bespon
  ruamel.yaml
  toml

tests_require =
  Sphinx
  black
  coverage[TOML]
  flake8
  flake8-docstrings
  hypothesis
  isort
  pyfakefs
  pytest
  pytest-cov
  pytest-django
  tox
